@@ -2,3 +2,7 @@
 
 	* Makefile.in.in: Upgrade to gettext-0.10.40.
 
+2002-07-29  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.40.
+
